Bug 420354 - Information Panel shows different information depending on where we search for things
Summary: Information Panel shows different information depending on where we search fo...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-20 19:36 UTC by Patrick Silva
Modified: 2020-05-04 06:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08
Sentry Crash Report:


Attachments
result after the step 3 - unexpected (74.55 KB, image/png)
2020-04-20 19:36 UTC, Patrick Silva
Details
result after the last step - expected (81.40 KB, image/png)
2020-04-20 19:36 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-20 19:36:21 UTC
Created attachment 127723 [details]
result after the step 3 - unexpected

STEPS TO REPRODUCE
1. open Dolphin
2. click on any of the following items of places panel:
Trash
Network
Recent files/locations
Any partition under "Devices" section
All tags
3. press ctrl+f and search for something.
Result: Information Panel shows search icon and says "Type: unknown"
4. click on any of the following items of places panel:
Home, Desktop, Documents and Downloads under "Places" section
anything under "Search for" section
5. press ctrl+f and search for something
Result: Information Panel shows search icon and says "Query Results from '<search term>'" and "Type: Search Folder"

EXPECTED RESULT
always the result after the last step 5

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
Please see the attached screenshots showing the different results.
Comment 1 Patrick Silva 2020-04-20 19:36:59 UTC
Created attachment 127724 [details]
result after the last step - expected
Comment 2 Julian Steinmann 2020-05-01 09:21:09 UTC
Can reproduce. Also on Neon Unstable Edition, Dolphin 20.07.70.
Comment 3 Méven Car 2020-05-03 10:46:07 UTC
Git commit e076d8668f673e09ddd01b3367e413a494d6d2bb by Méven Car.
Committed on 03/05/2020 at 10:46.
Pushed by meven into branch 'master'.

filenamesearch:/ define a title for the query

Summary: CCBUG: 420354

Reviewers: ngraham, elvisangelaccio, #dolphin, #frameworks, iasensio

Reviewed By: elvisangelaccio, #dolphin, iasensio

Subscribers: iasensio, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D29198

M  +8    -2    src/search/dolphinsearchbox.cpp
M  +2    -0    src/search/dolphinsearchbox.h

https://commits.kde.org/dolphin/e076d8668f673e09ddd01b3367e413a494d6d2bb
Comment 4 Méven Car 2020-05-04 06:32:35 UTC
Git commit 951e2f2d49a8b1a3c025ba311d78070791a84923 by Méven Car.
Committed on 04/05/2020 at 06:32.
Pushed by meven into branch 'master'.

filenamesearch: Implement stat to display metainfo

Summary:
filenamesearch ioslave needed a stat implementation to be rendered properly in dolphin information panel.
FIXED-IN: 20.08

Test Plan: Open filenamsearch:/ in dolphin and search something

Reviewers: #dolphin, #frameworks, ngraham, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D29197

M  +1    -1    filenamesearch/CMakeLists.txt
M  +23   -0    filenamesearch/kio_filenamesearch.cpp
M  +1    -0    filenamesearch/kio_filenamesearch.h

https://commits.kde.org/kio-extras/951e2f2d49a8b1a3c025ba311d78070791a84923