filenamesearch: Implement stat to display metainfo

Summary:
filenamesearch ioslave needed a stat implementation to be rendered properly in dolphin information panel.

BUG: 420354
FIXED-IN: 20.08

Test Plan: Open filenamsearch:/ in dolphin and search something

Reviewers: #dolphin, #frameworks, ngraham, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D29197